# sbox-ga

./: CMakeLists.txt  Makefile  README.md
include/: analysis.hpp  genetic.hpp  sbox.hpp  utils.hpp
src/: analysis.cpp  analysis.hpp  config.h  const.h  genetic.cpp  genetic.hpp  main.cpp  sbox.cpp  sbox.hpp  thread_pool.cpp  thread_pool.hpp  utils.cpp  utils.hpp
